<resources>
    <string name="app_name">整个家</string>
    <string name="text_title">全屋空间搭配清单|现代曲线</string>
    <string name="text_body">柔润线条满屋，舒适功能兼顾，适用80–100m²三口舒适之家</string>
    <string name="carpenter_title">造作设计师｜意大利｜Palomba Serafini Associati</string>
    <string name="carpenter_body">“始终保持一份为人们创造全新设计与体验的初心与激情。”</string>
    <string name="app_carpenter">匠</string>
    <string name="app_device">器</string>
    <string name="me_click_login">点击登录</string>
    <string name="more">更多</string>
    <string name="scheme">方案</string>
    <string name="home_server">服务保障</string>
    <string name="home_price">价格保障</string>
    <string name="home_7day">7天退换</string>
    <string name="home_time">准时交付</string>
    <string name="beautiful_single">颜值单品</string>
    <string name="home_item_single">8点椅TM</string>
    <string name="home_item_price">￥00.00</string>
    <string name="custom_server">联系客服</string>
    <string name="shopping_cart">购物车</string>
    <string name="to_buy">立即购买</string>
    <string name="to_add">加入购物车</string>
    <string name="so_many_str">样板间是商品房的一个包装，也是购房者装修效果的参照实例。样板间是一个楼盘的脸面，其好坏直接影响房子的销售。</string>
    <string name="your_name">姓名：</string>
    <string name="your_phone">电话：</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="input_phone">请输入您的手机号</string>
    <string name="your_house">楼盘：</string>
    <string name="input_house">请输入您的楼盘名</string>
    <string name="your_type">户型：</string>
    <string name="input_type">请输入您的户型</string>
    <string name="your_area">面积：</string>
    <string name="input_area">请输入您的房屋面积</string>
    <string name="your_style">意向风格：</string>
    <string name="input_style">请输入您意向的风格</string>
    <string name="your_other">其他：</string>
    <string name="input_other">其他风格</string>
    <string name="sublime">确认</string>
    <string name="solagon">· 好的家装 可以简单 ·</string>
    <string name="share_mah">分享整个家</string>
    <string name="mah_updata">版本更新</string>
    <string name="about_mah">关于整个家</string>
    <string name="me">个人资料</string>
    <string name="me_order">我的订单</string>
    <string name="me_scheme">我的方案</string>
    <string name="me_cart">我的收藏</string>
    <string name="me_card_shop">购物车</string>
    <string name="me_local">收货地址</string>
    <string name="me_set">客服</string>
    <string name="add_shop">加入购物车</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_password">请输入您的密码</string>
    <string name="quick_login">快速登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="now_login">立即注册</string>
    <string name="input_code">请输入您的验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_password_next">请再次输入您的密码</string>
    <string name="next">下一步</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="go_back">返回</string>
    <string name="input_nick">请输入昵称</string>
    <string name="anl_phone">验证手机号码</string>
    <string name="donologin"><![CDATA[<<先逛逛看]]></string>
    <string name="select_local">地区选择</string>
    <string name="select_floor">楼盘选择</string>
    <string name="select_type">户型选择</string>
    <string name="select_style">风格选择</string>
    <string name="me_manager">全民经纪人</string>
    <string name="shigong_register">您还没有开启施工人员功能,确认开启请发送验证码验证</string>
    <string name="_1_45_2_3_50cm_4_5">1、线管转角为45°折弯\n2、强弱电搭接处进行了信号的屏蔽处理\n3、强弱电同向管线间距50cm\n4、地面同类同向多根线管采用成品排卡固定
        5、施工与公司要求标准相符</string>
    <string name="islick">可能喜欢\n方案【】</string>
</resources>
