<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_title_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/ivMeAvatar"
                    android:layout_width="@dimen/me_pic_avator"
                    android:layout_height="@dimen/me_pic_avator"
                    android:src="@mipmap/ic_launcher_round"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/me_click_login"
                    android:textSize="@dimen/sp_18"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </LinearLayout>

            <LinearLayout
                style="@style/me_linearlayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/main_me"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_order"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me_order"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_scheme"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me_scheme"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_collection"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me_cart"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_shopcart"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me_card_shop"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_local"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/me_local"
                    tools:ignore="RtlHardcoded"/>
            </LinearLayout>

            <LinearLayout
                android:animateLayoutChanges="true"
                style="@style/me_linearlayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_share"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/share_mah"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_updata"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/mah_updata"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/me_about"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/about_mah"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:id="@+id/tvSet"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:drawableLeft="@drawable/icon_set"
                    android:drawablePadding="@dimen/dp_10"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/me_set"
                    tools:ignore="RtlHardcoded"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>