<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/rlSchemeDetailBottom"
              android:layout_width="match_parent"
              android:layout_height="?actionBarSize"
              android:layout_gravity="bottom"
              android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/toolbar_shadow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:divider="@drawable/shape_divider"
        android:dividerPadding="10dp"
        android:gravity="center"
        android:showDividers="middle"
        tools:showIn="@layout/activity_scheme_detail">

        <TextView
            android:id="@+id/tvServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/custom_server"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tvToCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/shopping_cart"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tvToBuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/to_buy"
            android:textSize="@dimen/sp_18"/>

    </LinearLayout>


</LinearLayout>
