<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView"
        android:overScrollMode="never"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/generalHeight"
        android:divider="@drawable/shape_divider"
        android:dividerPadding="10dp"
        android:gravity="center_vertical"
        android:showDividers="middle">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/custom_server"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/shopping_cart"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/to_buy"
            android:textSize="22sp"/>
    </LinearLayout>
</LinearLayout>