<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBlackGold"
             android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/magin_30"
            android:text="@string/solagon"
            android:textColor="@color/solagon"
            android:textSize="18sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llToSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/magin_30"
        android:orientation="vertical"
        android:visibility="visible">


        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magin_30"
            android:background="@color/cardview_dark_background"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/magin_30"
        android:divider="@drawable/shape_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalHeight"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalHeight"
            android:background="@null"
            android:hint="@string/input_password"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magin_30"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/login"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/now_login"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end"
                    android:text="@string/forget_password"
                    android:textColor="@color/grey"
                    tools:ignore="RtlHardcoded"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorBlackGold"
                    android:padding="@dimen/dp_10"
                    android:text="@string/quick_login"
                    android:textColor="@color/grey"
                    tools:ignore="RtlHardcoded"/>
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/wechat"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llToNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/magin_30"
        android:divider="@drawable/shape_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/generalHeight"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_phone"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"/>

            <Button
                android:id="@+id/btnCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTran55BlackGold"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalHeight"
            android:background="@null"
            android:hint="@string/input_code"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/grey"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/next"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFinishRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/magin_30"
        android:divider="@drawable/shape_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalHeight"
            android:background="@null"
            android:hint="@string/input_password"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalHeight"
            android:background="@null"
            android:hint="@string/input_password_next"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/grey"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </LinearLayout>
</FrameLayout>