<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:weightSum="2"
    tools:showIn="@layout/activity_login_anim">


    <LinearLayout
        android:id="@+id/llBottomDisAnim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/chocolate"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"/>


        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/selector_55grey_muti_press"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tvDoNotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/donologin"
            android:textColor="@drawable/selector_text_press"
            android:textSize="13sp"/>

    </LinearLayout>

</LinearLayout>